[package]
name = "console"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
rust-gears-sdk = { path = "../", features = [
    "all",
] }
structopt = "0.3.26"

colored = { version = "*" }
log = "0.4.26"
tokio = { version = "1", features = [
    "full",
] }

log4rs = "1.0.0"
serde_json = "1.0.140"
serde = "1.0.219"
ethabi = "18.0.0"
libc = "0.2.171"
libloading = "0.8.3"
wedpr_l_libsm = "0.3.5"
toml = "0.8.20"

[features]
default = [
    "all",
]
libtestcallback = [
]
bcos2sdk_ffi = [
]
all = [
    "libtestcallback",
    "bcos2sdk_ffi",
]
